--- a/Assets/Scripts/Joystick Pack/Scripts/Editor/JoystickEditorAssembly.asmdef
+++ b/Assets/Scripts/Joystick Pack/Scripts/Editor/JoystickEditorAssembly.asmdef
@@ -1,13 +1,12 @@
 {
-    "name": "Scripts",
+    "name": "NewAssembly",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:6546d7765b4165b40850b3667f981c26",
-        "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:ea1ee771b733d724981d1b8c4f448ad3"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
